--- a/public/2014/holiday/byword.css
+++ b/public/2014/holiday/byword.css
@@ -1,19 +1,19 @@
 /* Imported from byword */
 html {
-    /* the line height value of 1.9 is fixed for a line height multiple of 1.4 in the text view */
-    font: normal 106.2%/1.9 serif;
+  /* the line height value of 1.9 is fixed for a line height multiple of 1.4 in the text view */
+  font: normal 106.2%/1.9 serif;
 }
 
 body {
-    font-family: 'Helvetica', Helvetica, Georgia, serif;
-    word-wrap: break-word;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    vertical-align: baseline;
-    overflow:hidden;
-    background-color: #f2f2f2;
-    color: #3c3c3c;
+  font-family: "Helvetica", Helvetica, Georgia, serif;
+  word-wrap: break-word;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+  overflow: hidden;
+  background-color: #f2f2f2;
+  color: #3c3c3c;
 }
 
 /**
@@ -23,41 +23,41 @@ body {
  */
 
 #wrapper {
-    position: fixed;
-    width: 99.9%;
-    height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    font-size: 1.0em;
+  position: fixed;
+  width: 99.9%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  font-size: 1em;
 }
 
 #wrapper::-webkit-scrollbar {
-    width: 8px;
-    height: 10px;
-    -webkit-transition: all .45s ease-in;
-    position: relative;
+  width: 8px;
+  height: 10px;
+  -webkit-transition: all 0.45s ease-in;
+  position: relative;
 }
-#wrapper::-webkit-scrollbar-button:start:decrement, #wrapper::-webkit-scrollbar-button:end:increment {
-    height: 0px;
-    display: block;
-    background-color: transparent;
+#wrapper::-webkit-scrollbar-button:start:decrement,
+#wrapper::-webkit-scrollbar-button:end:increment {
+  height: 0px;
+  display: block;
+  background-color: transparent;
 }
 #wrapper::-webkit-scrollbar-track-piece {
-    background-color:
-    transparent;
-    -webkit-border-radius: 6px;
+  background-color: transparent;
+  -webkit-border-radius: 6px;
 }
 #wrapper::-webkit-scrollbar-thumb:vertical {
-    height: 50px;
-    background-color: #c8c8c8;
-    -webkit-border-radius: 6px;
-    -webkit-transition: all .45s ease-in;
+  height: 50px;
+  background-color: #c8c8c8;
+  -webkit-border-radius: 6px;
+  -webkit-transition: all 0.45s ease-in;
 }
 
 #content {
-    width: 610px;
-    margin: 0 auto 0 auto;
-    padding: 30px 0 30px 0;
+  width: 610px;
+  margin: 0 auto 0 auto;
+  padding: 30px 0 30px 0;
 }
 
 /**
@@ -66,28 +66,52 @@ body {
  *
  */
 
-h1, h2, h3, h4, h5, h6 {
-    text-rendering: optimizeLegibility;
-    line-height: 1;
-    margin: 0.5rem 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-rendering: optimizeLegibility;
+  line-height: 1;
+  margin: 0.5rem 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    text-rendering: optimizeLegibility;
-    line-height: 1;
-    margin: 0.5rem 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-rendering: optimizeLegibility;
+  line-height: 1;
+  margin: 0.5rem 0;
 }
 
-h1, 
-h2, 
-h3 { margin-bottom: 1rem; }
+h1,
+h2,
+h3 {
+  margin-bottom: 1rem;
+}
 
-h1 { font-size: 2.75rem; }
-h2 { font-size: 2.25rem; }
-h3 { font-size: 1.75rem; }
-h4 { font-size: 1.25rem; }
-h5 { font-size: 1.00rem; }
-h6 { font-size: 0.85rem; }
+h1 {
+  font-size: 2.75rem;
+}
+h2 {
+  font-size: 2.25rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.25rem;
+}
+h5 {
+  font-size: 1rem;
+}
+h6 {
+  font-size: 0.85rem;
+}
 
 /**
  *
@@ -96,7 +120,7 @@ h6 { font-size: 0.85rem; }
  */
 
 p {
-	margin: 0 0 1.5em;
+  margin: 0 0 1.5em;
 }
 
 /**
@@ -106,11 +130,11 @@ p {
  */
 
 blockquote {
-    margin: 0 0 1.5em;
-    width: 96%;
-    padding: 0 10px;
-    border-left: 3px solid #ddd;
-    color: #777;
+  margin: 0 0 1.5em;
+  width: 96%;
+  padding: 0 10px;
+  border-left: 3px solid #ddd;
+  color: #777;
 }
 
 /**
@@ -120,36 +144,36 @@ blockquote {
  */
 
 pre code {
-	word-wrap: normal;
-	white-space: pre-wrap;
-    border: none;
-    padding: 0;
-    background-color: transparent;
-    -webkit-border-radius: 0;
+  word-wrap: normal;
+  white-space: pre-wrap;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  -webkit-border-radius: 0;
 }
 
 pre {
-	white-space: pre-wrap;
-    width: 96%;
-    margin-bottom: 24px;
-    overflow: hidden;
-    padding: 3px 10px;
-    -webkit-border-radius: 3px;
-    background-color: #eee;
-    border: 1px solid #ddd;
+  white-space: pre-wrap;
+  width: 96%;
+  margin-bottom: 24px;
+  overflow: hidden;
+  padding: 3px 10px;
+  -webkit-border-radius: 3px;
+  background-color: #eee;
+  border: 1px solid #ddd;
 }
 
 code {
-	white-space: nowrap;
-	font-family: monospace;
-    padding: 2px;
-    -webkit-border-radius: 3px;
-    background-color: #eee;
-    border: 1px solid #ddd;
+  white-space: nowrap;
+  font-family: monospace;
+  padding: 2px;
+  -webkit-border-radius: 3px;
+  background-color: #eee;
+  border: 1px solid #ddd;
 }
 
 small {
-	font-size: 65%;
+  font-size: 65%;
 }
 
 /**
@@ -159,12 +183,12 @@ small {
  */
 
 dt {
-	display: inline;
-    font-weight:bold;
+  display: inline;
+  font-weight: bold;
 }
 
 dd {
-	display: block;
+  display: block;
 }
 
 /**
@@ -174,11 +198,11 @@ dd {
  */
 
 a {
-    color: #308bd8;
-    text-decoration:none;
+  color: #308bd8;
+  text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 /**
@@ -188,13 +212,13 @@ a:hover {
  */
 
 hr {
-    width: 100%;
-    margin: 3em auto;
-    border: 0;
-    color: #eee;
-    background-color: #ccc;
-    height: 1px;
-    -webkit-box-shadow:0px 1px 0px rgba(255, 255, 255, 0.75);
+  width: 100%;
+  margin: 3em auto;
+  border: 0;
+  color: #eee;
+  background-color: #ccc;
+  height: 1px;
+  -webkit-box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
 }
 
 /**
@@ -203,22 +227,27 @@ hr {
  *
  */
 
-ol, ul {
-    list-style-position: outside;
-    padding-left: 0;
-    margin-left: 1.5em;
+ol,
+ul {
+  list-style-position: outside;
+  padding-left: 0;
+  margin-left: 1.5em;
 }
 
-ol li, ul li {
-    text-align: -webkit-match-parent;
+ol li,
+ul li {
+  text-align: -webkit-match-parent;
 }
 
 li p {
-    margin: 0.5em 0 0.5em;
+  margin: 0.5em 0 0.5em;
 }
 
-ol ol, ol ul, ul ul, ul ol {
-    padding-left: 1.5em;
+ol ol,
+ol ul,
+ul ul,
+ul ol {
+  padding-left: 1.5em;
 }
 
 /**
@@ -228,28 +257,28 @@ ol ol, ol ul, ul ul, ul ol {
  */
 
 table {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 24px;
-    border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-spacing: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 24px;
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-spacing: 0;
 }
 
 table th {
-    padding: 3px 10px;
-    background-color: #eee;
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
+  padding: 3px 10px;
+  background-color: #eee;
+  border-top: 1px solid #ddd;
+  border-left: 1px solid #ddd;
 }
 
 table tr {
 }
 
 table td {
-    padding: 3px 10px;
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
+  padding: 3px 10px;
+  border-top: 1px solid #ddd;
+  border-left: 1px solid #ddd;
 }
 
 /**
@@ -259,10 +288,10 @@ table td {
  */
 
 img {
-    border: none;
-    display: block;
-    margin: 1em auto;
-    max-width: 100%;
+  border: none;
+  display: block;
+  margin: 1em auto;
+  max-width: 100%;
 }
 
 /**
@@ -272,8 +301,8 @@ img {
  */
 
 mark {
-    background: #fefec0;
-    padding:1px 3px;
+  background: #fefec0;
+  padding: 1px 3px;
 }
 
 /**
@@ -282,18 +311,18 @@ mark {
  *
  */
 .footnote {
-    font-size: 0.8rem;
-    vertical-align: super;
+  font-size: 0.8rem;
+  vertical-align: super;
 }
 .footnotes ol {
-    font-weight: bold;
+  font-weight: bold;
 }
 .footnotes ol li {
-    text-align: -webkit-match-parent;
+  text-align: -webkit-match-parent;
 }
 
 .footnotes ol li p {
-    font-weight: normal;
+  font-weight: normal;
 }
 
 /**
@@ -302,19 +331,19 @@ mark {
  *
  */
 caption {
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-bottom: 5px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 figure {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
 
 figcaption {
-    font-size: 0.8rem;
-    font-style: italic;
+  font-size: 0.8rem;
+  font-style: italic;
 }
 
 /**
@@ -324,137 +353,155 @@ figcaption {
  */
 
 .shadow {
-    -webkit-box-shadow: 0 2px 4px #999;
+  -webkit-box-shadow: 0 2px 4px #999;
 }
 
 .source {
-    text-align: center;
-    font-size: 0.8em;
-    color: #777;
-    margin: -40px auto;
+  text-align: center;
+  font-size: 0.8em;
+  color: #777;
+  margin: -40px auto;
 }
 #wrapper {
-    width: 99.9%;
+  width: 99.9%;
 }
 #content {
-    width: 610px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 610px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Mobile support */
-@media only screen and (max-device-width:1024px) {
-    html {
-        overflow: auto;
-    }
+@media only screen and (max-device-width: 1024px) {
+  html {
+    overflow: auto;
+  }
 
-    #wrapper {
-        overflow: auto;
-        position: relative;
-    }
-}/* html elements */
+  #wrapper {
+    overflow: auto;
+    position: relative;
+  }
+} /* html elements */
 
 body {
-    background-color: #1a1a1a;
-    color: #bebebe;
+  background-color: #1a1a1a;
+  color: #bebebe;
 }
 a {
-    color: #308bd8;
+  color: #308bd8;
 }
 hr {
-    color: #666;
-    background-color: #666;
-    -webkit-box-shadow: none;
+  color: #666;
+  background-color: #666;
+  -webkit-box-shadow: none;
 }
 pre {
-    background-color: #222;
-    border-color: #3c3c3c;
+  background-color: #222;
+  border-color: #3c3c3c;
 }
 code {
-    background-color: #222;
-    border-color: #3c3c3c;
+  background-color: #222;
+  border-color: #3c3c3c;
 }
 blockquote {
-    border-color: #333;
-    color: #999;
+  border-color: #333;
+  color: #999;
 }
 table {
-    border-color: #3c3c3c;
+  border-color: #3c3c3c;
 }
 table th {
-    background-color: #222;
-    border-color: #3c3c3c;
+  background-color: #222;
+  border-color: #3c3c3c;
 }
 table td {
-    border-color: #3c3c3c;
+  border-color: #3c3c3c;
 }
 mark {
-    background: #bc990b;
-    color:#000;
+  background: #bc990b;
+  color: #000;
 }
 
 /* unique elements */
 
 #wrapper::-webkit-scrollbar-thumb:vertical {
-    background-color: #525252;
+  background-color: #525252;
 }
 #top-fader {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(26,26,26,1)), to(rgba(26,26,26,0)));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(26, 26, 26, 1)),
+    to(rgba(26, 26, 26, 0))
+  );
 }
 #bottom-fader {
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(26,26,26,1)), to(rgba(26,26,26,0)));
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(rgba(26, 26, 26, 1)),
+    to(rgba(26, 26, 26, 0))
+  );
 }
 
 /* custom formatting classes */
 
 .shadow {
-    -webkit-box-shadow: 0 2px 4px #000;
-}@media print {
-/* Printing support.
+  -webkit-box-shadow: 0 2px 4px #000;
+}
+@media print {
+  /* Printing support.
  * Override all printing colors to match the Light theme.
  */
-img, pre, blockquote, table, figure {
+  img,
+  pre,
+  blockquote,
+  table,
+  figure {
     page-break-inside: avoid;
-}
-body {
-    background-color:#fff;
-}
-#wrapper {
+  }
+  body {
+    background-color: #fff;
+  }
+  #wrapper {
     position: static;
     overflow: hidden;
     color: #000;
     width: 100%;
     margin: 0 auto;
-}
-.footnotes {
+  }
+  .footnotes {
     page-break-before: always;
-}
-#content {
+  }
+  #content {
     margin: 0 auto;
     padding: 0;
     width: 98%;
-}
-#top-fader, #bottom-fader {
+  }
+  #top-fader,
+  #bottom-fader {
     display: none;
-}
-hr {
-    color:#ddd;
-    background-color:#ddd;
-    -webkit-box-shadow:0px 1px 0px #ddd;
-}
-pre {
-    background-color:transparent;
+  }
+  hr {
+    color: #ddd;
+    background-color: #ddd;
+    -webkit-box-shadow: 0px 1px 0px #ddd;
+  }
+  pre {
+    background-color: transparent;
     border: 1px solid #ddd;
-}
-code {
-    background-color:transparent;
+  }
+  code {
+    background-color: transparent;
     border: 1px solid #ddd;
-}
-blockquote {
+  }
+  blockquote {
     border-left: 3px solid #ddd;
     color: #000;
-}
-ol {
+  }
+  ol {
     /*
      * Override the list style when printing to ensure list
      * markers won't get cut.
@@ -462,25 +509,25 @@ ol {
     list-style-position: inside;
     padding-left: 0;
     margin-left: 0;
-}
-table {
+  }
+  table {
     border-bottom: 1px solid #ddd;
     border-right: 1px solid #ddd;
-}
-table th {
-    background-color:transparent;
+  }
+  table th {
+    background-color: transparent;
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
-}
-table td {
+  }
+  table td {
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
-}
-mark {
-    background:transparent;
+  }
+  mark {
+    background: transparent;
     color: #000;
-}
-.source {
+  }
+  .source {
     color: #000;
-}
+  }
 }
