--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,80 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@plugin "daisyui" {
+  themes:
+    light --default,
+    dark --prefersdark;
+  logs: false;
+}
+
+@plugin "@tailwindcss/typography";
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  color-scheme: "light";
+
+  --color-base-100: oklch(95.127% 0.007 260.731);
+  --color-base-200: oklch(93.299% 0.01 261.788);
+  --color-base-300: oklch(89.925% 0.016 262.749);
+  --color-base-content: oklch(32.437% 0.022 264.182);
+  --color-primary: oklch(59.435% 0.077 254.027);
+  --color-primary-content: oklch(11.887% 0.015 254.027);
+  --color-secondary: oklch(69.651% 0.059 248.687);
+  --color-secondary-content: oklch(13.93% 0.011 248.687);
+  --color-accent: oklch(77.464% 0.062 217.469);
+  --color-accent-content: oklch(15.492% 0.012 217.469);
+  --color-neutral: oklch(45.229% 0.035 264.131);
+  --color-neutral-content: oklch(89.925% 0.016 262.749);
+  --color-info: oklch(69.207% 0.062 332.664);
+  --color-info-content: oklch(13.841% 0.012 332.664);
+  --color-success: oklch(76.827% 0.074 131.063);
+  --color-success-content: oklch(15.365% 0.014 131.063);
+  --color-warning: oklch(85.486% 0.089 84.093);
+  --color-warning-content: oklch(17.097% 0.017 84.093);
+  --color-error: oklch(60.61% 0.12 15.341);
+  --color-error-content: oklch(12.122% 0.024 15.341);
+
+  --radius-selector: 1rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 0;
+  --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  default: false;
+  color-scheme: "dark";
+
+  --color-base-100: oklch(32.44% 0.0229 264.18);
+  --color-base-content: oklch(95.13% 0.0074 260.73);
+  --color-primary: oklch(37.92% 0.029 266.47);
+  --color-primary-content: oklch(95.13% 0.0074 260.73);
+  --color-secondary: oklch(41.57% 0.0324 264.13);
+  --color-secondary-content: oklch(95.13% 0.0074 260.73);
+  --color-accent: oklch(69.65% 0.0591 248.69);
+  --color-neutral: oklch(45.23% 0.0352 264.13);
+  --color-info: oklch(59.44% 0.0772 254.03);
+  --color-info-content: oklch(59.44% 0.0772 254.03);
+  --color-success: oklch(76.83% 0.0749 131.06);
+  --color-success-content: oklch(76.83% 0.0749 131.06);
+  --color-warning: oklch(69.29% 0.0963 38.24);
+  --color-warning-content: oklch(69.29% 0.0963 38.24);
+  --color-error: oklch(60.61% 0.1206 15.34);
+  --color-error-content: oklch(60.61% 0.1206 15.34);
+
+  --radius-selector: 1rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 0;
+  --noise: 0;
+}
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
